Fix postbox overflow (Closes: #337)

--- a/style/database.css
+++ b/style/database.css
@@ -19,6 +19,10 @@
   margin-right: 1rem;
 }
 
+.sr_result_field {
+  overflow-wrap: anywhere;
+}
+
 #search_replace_command {
   margin: 1rem 0;
 }
