--- a/style/security.css
+++ b/style/security.css
@@ -15,3 +15,7 @@
   font-weight: normal;
   font-size: 0.8em;
 }
+
+.cruftfile-path {
+  overflow-wrap: anywhere;
+}
